<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home_Page"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/home_page_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hmpg_txt"
        android:textSize="23sp"
        android:textStyle="bold"
        android:textColor="#008000"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/constraint_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Constraint_layout"
        android:textSize="20sp"
        android:textStyle="bold"
        android:backgroundTint="#055C9D"/>

    <Button
        android:id="@+id/relative_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Relative_layout"
        android:textSize="20sp"
        android:textStyle="bold"
        android:backgroundTint="#055C9D"/>

    <Button
        android:id="@+id/linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Linear_layout"
        android:textSize="20sp"
        android:textStyle="bold"
        android:backgroundTint="#055C9D"/>

    <Button
        android:id="@+id/date_time_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Date_Time"
        android:textSize="20sp"
        android:textStyle="bold"
        android:backgroundTint="#055C9D"/>

    <Button
        android:id="@+id/check_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Check_Box"
        android:textSize="20sp"
        android:textStyle="bold"
        android:backgroundTint="#055C9D"/>

    <Button
        android:id="@+id/radio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Radio"
        android:textSize="20sp"
        android:textStyle="bold"
        android:backgroundTint="#055C9D"/>

    <Button
        android:id="@+id/card_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Card_View"
        android:textSize="20sp"
        android:textStyle="bold"
        android:backgroundTint="#055C9D"/>

    <Button
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Spinner"
        android:textSize="20sp"
        android:textStyle="bold"
        android:backgroundTint="#055C9D"/>

    <Button
        android:id="@+id/image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Image_view"
        android:textSize="20sp"
        android:textStyle="bold"
        android:backgroundTint="#055C9D"/>

    <Button
        android:id="@+id/toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Toggle_Button"
        android:textSize="20sp"
        android:textStyle="bold"
        android:backgroundTint="#055C9D"/>

    <Button
        android:id="@+id/switchcompat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Switch_Compat"
        android:textSize="20sp"
        android:textStyle="bold"
        android:backgroundTint="#055C9D"/>

    <Button
        android:id="@+id/gridview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Grid_view"
        android:textSize="20sp"
        android:textStyle="bold"
        android:backgroundTint="#055C9D"/>

    <Button
        android:id="@+id/listview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/List_view"
        android:textSize="20sp"
        android:textStyle="bold"
        android:backgroundTint="#055C9D"/>

</LinearLayout>
