<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".widgets.Checkbox_prac"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <CheckBox
            android:id="@+id/sandwich_dtl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sandwich"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/sandwich_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <CheckBox
            android:id="@+id/pizza_dtl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pizza"
            android:textSize="20sp" />
        <ImageView
            android:id="@+id/pizza_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <CheckBox
            android:id="@+id/burger_dtl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/burger"
            android:textSize="20sp" />
        <ImageView
            android:id="@+id/burger_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <CheckBox
            android:id="@+id/dabeli_dtl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Dabeli"
            android:textSize="20sp" />
        <ImageView
            android:id="@+id/dabeli_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

    <Button
        android:id="@+id/bill_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/billbtn"
        android:textSize="25sp"
        android:layout_marginTop="30sp"
        android:paddingTop="10sp"
        android:paddingBottom="10sp"
        android:paddingLeft="40sp"
        android:paddingRight="40sp"
        />

    <TextView
        android:id="@+id/bill_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:text="@string/billamount"
        android:textSize="20sp"/>
</LinearLayout>